--- a/frontend/pulsus-frontend/src/components/RegistrationForm/style.css
+++ b/frontend/pulsus-frontend/src/components/RegistrationForm/style.css
@@ -1,3 +1,4 @@
+/*
 .registration-form {
     display: flex;
     flex-direction: column;
@@ -21,3 +22,4 @@
   .registration-form fieldset {
     margin-top: 15px;
   }
+  */
