--- a/frontend/pulsus-frontend/src/index.css
+++ b/frontend/pulsus-frontend/src/index.css
@@ -1,5 +1,20 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html,body, #root{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
 html{
     --text-error-color: #ff0000
     --text-color: #ffffff
     --background-color: #f5f5f5
+}
+
+body {
+    @apply bg-main_background text-text;
 }
